<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="420dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="330dp">

                        <ImageView
                            android:id="@+id/backdrop_img"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="fitXY"
                            tools:src="@drawable/poster_aquaman" />

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="65dp"
                            android:layout_alignParentBottom="true"
                            android:src="@drawable/gradient_black" />
                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginHorizontal="16dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/poster_img"
                            android:layout_width="100dp"
                            android:layout_height="150dp"
                            android:src="@drawable/poster_aquaman" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/title"
                                android:layout_marginHorizontal="16dp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:fontFamily="sans-serif-black"
                                android:textColor="@color/white"
                                android:textSize="28sp"
                                tools:text="Ghost in the Shell 2 : Innocence" />

                            <TextView
                                android:id="@+id/release_date"
                                android:layout_marginHorizontal="16dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="6dp"
                                android:fontFamily="sans-serif-medium"
                                android:text="@string/released_at"
                                android:textColor="@color/grey"
                                android:textSize="13sp" />

                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/genre_list"
                                android:layout_marginHorizontal="12dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                tools:itemCount="3"
                                tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                                tools:listitem="@layout/vh_genre"
                                tools:orientation="horizontal" />
                        </LinearLayout>
                    </LinearLayout>
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="12dp"
                    android:alpha="0.25"
                    android:background="@color/greyFade" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="12dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/rating"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif-black"
                                android:textColor="@color/yellowGorse"
                                android:textSize="24sp"
                                tools:text="8.9" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="4dp"
                                android:fontFamily="sans-serif"
                                android:text="@string/out_of_ten"
                                android:textColor="@color/grey" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/vote"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-medium"
                            android:textColor="@color/grey"
                            tools:text="256 rated" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/duration"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-black"
                            android:textColor="@color/yellowGorse"
                            android:textSize="24sp"
                            tools:text="1h 20m" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-medium"
                            android:text="@string/duration"
                            android:textColor="@color/grey" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/language"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-black"
                            android:textAllCaps="true"
                            android:textColor="@color/yellowGorse"
                            android:textSize="24sp"
                            tools:text="EN" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-medium"
                            android:text="@string/language"
                            android:textColor="@color/grey" />
                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:alpha="0.25"
                    android:background="@color/greyFade" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/overview"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/grey"
                    tools:text="@string/lorem_ipsum" />

                <TextView
                    android:id="@+id/cast_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/cast"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/cast_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="15dp"
                    tools:itemCount="5"
                    tools:listitem="@layout/vh_cast" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
